# ORF-Veil

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/veil-cli/: Cargo.toml
crates/veil-cli/src/: main.rs
crates/veil-core/: Cargo.toml
crates/veil-core/benches/: crypto_benchmarks.rs
crates/veil-core/src/: cell.rs  error.rs  fragmentation.rs  lib.rs  reassembly.rs
crates/veil-core/src/crypto/: encryption.rs  keys.rs  mod.rs
crates/veil-core/tests/: cell_tests.rs
crates/veil-relay/: Cargo.toml
crates/veil-relay/config/: relay.default.toml
crates/veil-relay/examples/: e2e_smoke_test.rs
crates/veil-relay/src/: config.rs  forwarding.rs  lib.rs  mailbox.rs  main.rs  metrics.rs  node.rs  pull_listener.rs
crates/veil-routing/: Cargo.toml
crates/veil-routing/examples/: discover_relays.rs
crates/veil-routing/src/: discovery.rs  dummy_traffic.rs  lib.rs  path_selection.rs  topology.rs  topology_file.rs
crates/veil-sdk/: Cargo.toml
crates/veil-sdk/src/: client.rs  cover_traffic.rs  envelope.rs  lib.rs  receiver.rs  session.rs
docker/: Dockerfile.cli  Dockerfile.relay  docker-compose.yml
docker/config/: relay1.toml  relay2.toml  relay3.toml
docs/: ARCHITECTURE.md  PROTOCOL_SPEC.md  ROADMAP.md  THREAT_MODEL.md
scripts/: run-local-network.sh  setup-dev.sh
src/: lib.rs
tests/integration/: e2e_test.rs
topology/: local-docker.json
