[package]
name = "veil"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Workspace root crate; hosts cross-crate integration tests for the Veil relay fabric."
publish = false

[lib]
name = "veil"
path = "src/lib.rs"

[[test]]
name = "e2e"
path = "tests/integration/e2e_test.rs"

[dev-dependencies]
veil-core = { path = "crates/veil-core" }
veil-relay = { path = "crates/veil-relay" }
veil-routing = { path = "crates/veil-routing" }
veil-sdk = { path = "crates/veil-sdk" }
tokio = { workspace = true }
rand = { workspace = true }

[workspace]
resolver = "2"
members = [
    "crates/veil-core",
    "crates/veil-relay",
    "crates/veil-routing",
    "crates/veil-sdk",
    "crates/veil-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sambhav Dwivedi"]
license = "MIT"
repository = "https://github.com/sambhavdwivediofficial/ORF-Veil"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
chacha20poly1305 = "0.10"
x25519-dalek = "2"
rand = "0.8"
