[package]
name = "veil-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cryptographic core and fixed-size cell protocol for the Veil oblivious relay fabric."

[dependencies]
chacha20poly1305 = { workspace = true }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = { workspace = true }
thiserror = { workspace = true }
hkdf = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
